<resources>
    <string name="loginMsg">Welcome Back!</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="register">Join Us!</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="display_name">display name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="regiater_now">Regiater now</string>
    <string name="chats">chats</string>
    <string name="addContact">addContact</string>
    <string name="profilepic">profilePic</string>
    <string name="app_name">MallIn</string>
    <string name="google_cloud_vision_api_key">YOUR_API_KEY_HERE</string>
    <string name="BaseUrl">http://10.0.2.2:12346/</string>
    <string name="ServerPath">http://10.0.2.2</string>
    <string name="ServerPort">12346</string>
    <string name="settings">settings</string>
    <string name="select_picture" />
    <string name="channel_name">New message</string>
    <string name="channel_description">new message</string>
    <string name="profile_pic_path"> </string>
    <string name="add_profile_picture">Add profile picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lock">lock</string>
    <string name="floor_0">floor 0</string>
    <string name="floor_1">floor 1</string>
    <string name="floor_3">floor 3</string>
    <string name="floor_2">floor 2</string>
    <string name="sync_data">sync data</string>
    <string name="saving_data_please_wait_were_you_are_standing">Saving Data, please wait in your place</string>
    <string name="sync_data_please_don_t_close_the_app">Sync Data Please Don\'t close the app</string>
</resources>