<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_toggle_lock"
        android:icon="@drawable/baseline_lock_24"
        android:title="@string/lock"
        app:showAsAction="ifRoom"
        />
    <item app:showAsAction="never" android:id="@+id/floor_0" android:title="@string/floor_0"/>
    <item app:showAsAction="never" android:id="@+id/floor_1" android:title="@string/floor_1"/>
    <item app:showAsAction="never" android:id="@+id/floor_2" android:title="@string/floor_2"/>
    <item app:showAsAction="never" android:id="@+id/floor_3" android:title="@string/floor_3"/>
    <item app:showAsAction="never" android:id="@+id/sync_data" android:title="@string/sync_data"/>
</menu>